--- a/index.html
+++ b/index.html
@@ -1,11 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/reset.css">
+  <link rel="stylesheet" href="styles/stylee.css">
+  <link rel="stylesheet" href="styles/media.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ga+Maamli&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>davalebaN12</title>
 </head>
+
 <body>
-    
+  <header>
+    <div class="hedet-Div">
+      <h2 class="JHONTRAKTOR">JHONTRAKTOR</h2>
+
+      <nav class="nameN">
+        <ul class="FirstUlTegs">
+          <li><a class="Home" href="#">Home</a></li>
+          <li><a class="navMEnStrings aboutt" href="#">About US</a></li>
+          <li><a class="navMEnStrings services" href="#">Service</a></li>
+          <li><a class="navMEnStrings project" href="#">Project</a></li>
+        </ul>
+        <ul class="seCondUlTegs">
+          <li><a class="englesh" href="#">English <span><img src="./images/Vector (1).svg" alt=""></span></a></li>
+          <li class="burgerBar-Div">
+            <i class="fa-solid fa-bars"></i>
+          </li>
+          <li>
+            <button class="bootom-ConTact">Contact Us</button>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section>    
+    <div class="backgrund-Div">
+      <img class="image-big" src="image/photo_construction-workers-surveying-site 1.svg" alt="">
+    </div>
+    <div class="left-coNteinner">
+      <div class="big-Strings">
+        <h2 class="wepreper">We Prepare</h2>
+        <h3 class="forTHe">For The <span class="fucTeree">Future</span></h3>
+        <p class="weproviDer">We provide the best architectural design, contruction, and
+          building maintance services for you.</p>
+        <div class="SmolBlock-div">
+          <div class="leftSmol-div">
+            <h4 class="ourSevices">Our Services <img src="./image/arrow-right-circle.svg" alt=""></h4>
+          </div>
+          <div class="right-div">
+            <a class="vivedProjecst" href="#">View Project</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="MeoRe-Secqcia">
+        <div class="first-sTrings">
+          <p class="featureProcetc">Featured Project</p>
+          <div>
+           <nav>  
+            <ul>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+              <li><a href="#"></a></li>
+            </ul>
+           </nav>
+          </div>
+        </div>
+    </div>
+  </section>
+
+  </main>
 </body>
+
 </html>
