es priveli cvlileba

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles/stylee.css">
   <link rel="stylesheet" href="styles/media.css">
 
+
   <link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Ga+Maamli&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -41,49 +42,95 @@
     </div>
   </header>
   <main>
-    <section>    
-    <div class="backgrund-Div">
-      <img class="image-big" src="image/photo_construction-workers-surveying-site 1.svg" alt="">
-    </div>
-    <div class="left-coNteinner">
-      <div class="big-Strings">
-        <h2 class="wepreper">We Prepare</h2>
-        <h3 class="forTHe">For The <span class="fucTeree">Future</span></h3>
-        <p class="weproviDer">We provide the best architectural design, contruction, and
-          building maintance services for you.</p>
-        <div class="SmolBlock-div">
-          <div class="leftSmol-div">
-            <h4 class="ourSevices">Our Services <img src="./image/arrow-right-circle.svg" alt=""></h4>
-          </div>
-          <div class="right-div">
-            <a class="vivedProjecst" href="#">View Project</a>
+    <section>
+      <div class="backgrund-Div">
+        <img class="image-big" src="image/photo_construction-workers-surveying-site 1.svg" alt="">
+      </div>
+      <div class="left-coNteinner">
+        <div class="big-Strings">
+          <h2 class="wepreper">We Prepare</h2>
+          <h3 class="forTHe">For The <span class="fucTeree">Future</span></h3>
+          <p class="weproviDer">We provide the best architectural design, contruction, and
+            building maintance services for you.</p>
+          <div class="SmolBlock-div">
+            <div class="leftSmol-div">
+              <h4 class="ourSevices">Our Services <img src="./image/arrow-right-circle.svg" alt=""></h4>
+            </div>
+            <div class="right-div">
+              <a class="vivedProjecst" href="#">View Project</a>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <section>
-    <div class="MeoRe-Secqcia">
+    <section>
+      <div class="MeoRe-Secqcia">
         <div class="first-sTrings">
           <p class="featureProcetc">Featured Project</p>
           <div>
-           <nav>  
-            <ul>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-            </ul>
-           </nav>
+            <nav>
+              <ul class="seconD-Navmen">
+                <li><a class="allWorkuts" href="#">All Works</a></li>
+                <li><a class="aTegs" href="#">Construction</a></li>
+                <li><a class="aTegs" href="#">Architecture</a></li>
+                <li><a class="aTegs none" href="#">Building</a></li>
+                <li><a class="aTegs" href="#">Renovations</a></li>
+                <li><a class="aTegs none" href="#">Interior</a></li>
+              </ul>
+            </nav>
           </div>
         </div>
+
+
+        <div class="divSection-N3">
+          <div class="firtFoto-div">
+            <img class="first-foto" src="./image/donny-jiang-42gFAgdIUC8-unsplash 1.svg" alt="">
+
+            <div class="firtFOtos-strings">
+              <p class="frstfotos-ptegs">Skyskuy Tower</p>
+              <p class="frstfotos-ptegs">Renovation & Architecture</p>
+            </div>
+          </div>
+
+
+          <div class="secoomFoto-Div">
+            <img class="mere-foto" src="./image/meoreFoto.svg" alt="">
+            <div class="secondDIv-strings">
+              <p class="seconDiv-string">The Fallingwater House</p>
+              <p class="seconDiv-string">Building & Interior</p>
+            </div>
+          </div>
+
+          <div class="meotxe-divFto">
+            <img class="mesame-Foto" src="./image/mesameFoto.svg" alt="">
+            <div class="meotxediVs-strings">
+              <p class="meotxeDivs-strngBoyz">The Orange Apartemen</p>
+              <p class="meotxeDivs-strngBoyz">Construction & Interior</p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  
+    <section>
+    <div class="big-mainQshen">
+      <div class="big-FiestsectIonString">
+        <h2 class="whatOirr">What Our Client Says</h2>
+         <h3 class="lamverY">I am very satisfied with the services. Their team is very professional and efficient in completing our project on time and at a very affordable cost. The quality of their work is very good and I highly recommend this company for any construction project.</h3>
+          <div class="team2-DIv">
+            <h4 class="tamN2">Tom DeLonge</h4>
+            <h4 class="tamN2">CEO, Lexmark</h4>
+          </div>
+           <h3 class="ladingwaY">Leading Way In Building & Civil Construction</h3>
+        </div>
     </div>
-  </section>
+    </section>
 
   </main>
+
+
 </body>
 
 </html>
