--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/stylee.css">
   <link rel="stylesheet" href="styles/media.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://fonts.googleapis.com/css2?family=Calistoga&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Ga+Maamli&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -44,7 +45,7 @@
   <main>
     <section>
       <div class="backgrund-Div">
-        <img class="image-big" src="image/photo_construction-workers-surveying-site 1.svg" alt="">
+        <img class="image-big" src="image/photo_construction-workers-surveying-site 1.svg" alt="foto">
       </div>
       <div class="left-coNteinner">
         <div class="big-Strings">
@@ -54,7 +55,7 @@
             building maintance services for you.</p>
           <div class="SmolBlock-div">
             <div class="leftSmol-div">
-              <h4 class="ourSevices">Our Services <img src="./image/arrow-right-circle.svg" alt=""></h4>
+              <h4 class="ourSevices">Our Services <img src="./image/arrow-right-circle.svg" alt="foto"></h4>
             </div>
             <div class="right-div">
               <a class="vivedProjecst" href="#">View Project</a>
@@ -106,31 +107,145 @@
             <img class="mesame-Foto" src="./image/mesameFoto.svg" alt="">
             <div class="meotxediVs-strings">
               <p class="meotxeDivs-strngBoyz">The Orange Apartemen</p>
-              <p class="meotxeDivs-strngBoyz">Construction & Interior</p>
+              <h4 class="meotxeDivs-strngBoyz">Construction & Interior</h4>
 
             </div>
           </div>
         </div>
       </div>
     </section>
-  
+
     <section>
-    <div class="big-mainQshen">
-      <div class="big-FiestsectIonString">
-        <h2 class="whatOirr">What Our Client Says</h2>
-         <h3 class="lamverY">I am very satisfied with the services. Their team is very professional and efficient in completing our project on time and at a very affordable cost. The quality of their work is very good and I highly recommend this company for any construction project.</h3>
+      <div class="big-mainQshen">
+        <div class="big-FiestsectIonString">
+          <h2 class="whatOirr">What Our Client Says</h2>
+          <h3 class="lamverY">I am very satisfied with the services. Their team is very professional and efficient in
+            completing our project on time and at a very affordable cost. The quality of their work is very good and I
+            highly recommend this company for any construction project.</h3>
           <div class="team2-DIv">
             <h4 class="tamN2">Tom DeLonge</h4>
             <h4 class="tamN2">CEO, Lexmark</h4>
           </div>
-           <h3 class="ladingwaY">Leading Way In Building & Civil Construction</h3>
+          <h3 class="ladingwaY">Leading Way In Building & Civil Construction</h3>
         </div>
-    </div>
+
+
+        <div class="conTEiners-marGin">
+          <div class="right-conteiner">
+            <div class="rightconteinNErs-width">
+              <div class="right-strings">
+                <p class="requset">Request A Quote</p>
+                <p class="copplate">Complete control over products allow us to our customers the best quality
+                  prices and services. We take great pride in everything that we do in Jhontraktor </p>
+              </div>
+
+              <div class="inputsMaaRger-Div">
+                <div class="frist-imppuTs">
+                  <input class="pirveli-IN" placeholder="Name" >
+                  <input class="meore-IN" placeholder="Email">
+                </div>
+
+                <div class="secenD-Inputs">
+                  <input class="mesame-input" placeholder="Phone">
+                  <div class="input-with-icon">
+                    <img src="./image/icone.svg" alt="">
+                    <input class="meoTxe-input" placeholder="Select Your Service">
+                  </div>  
+                </div>
+               <input class="mexUte-inPut" placeholder="Additional Details! " id="detalis">
+               <input class="meeqvse-input" placeholder="Submit Request" id="sumbit">
+              </div>
+            </div>
+
+
+          </div>
+
+          <div class="left-ConnTeinner">
+           <div class="leftConteinner-width">
+             <h2 class="contaCtInfo">Contact Info</h2>
+             <div class="leftConteiiners-stringsMarger">
+              <div>
+                <h3 class="Our">Our Location</h3>
+                <p class="office">18 Office Park Building 21th Floor Unit C. Jl. TB Simatupang Kav. 18, Jakarta Selatan ,12520</p>
+              </div>
+              <div>
+                <h3 class="Our">Quick Contact</h3>
+                <p class="office">Email : (+62) 877-2469-7246
+                  Call Us : contact@jhontraktor.co</p>
+              </div>
+
+              <div>
+                <h3 class="Our">Opening Hours</h3>
+                <p class="office">Monday - Friday
+                  09:00 AM - 06:00 PM</p>
+              </div>
+              <div>
+                <p class="Do">Do You Have Any Question, Just Contact Us To Get Help!</p>
+              </div>
+              <input   placeholder="Contact Us" class="COntaCts-Usinput">
+
+
+             </div>
+           </div>
+          </div>
+        </div>
+
+      </div>
     </section>
-    
+
 
   </main>
+<footer>
+  <div class="footerBig-Div">
+    <div class="fotter-DIv">
+      <div class="footer-margindiv">
+          <div class="firstSection">
+         <a class="TRakTor">JHONTRAKTOR</a>
+           <p class="abouTTaS">About Us</p>
+           <p class="wehave">We have the confidence to provide the best service for you, with the support of Professional and Certified HR that we currently have and the high-quality materials we use and structured work techniques, we will be able to realize timely completion of work.</p>
+           <div class="iconeS-Div">
+            <a href="">
+              <i class="fa-brands fa-instagram"></i>
 
+            </a>
+            <a href="">
+              <i class="fa-brands fa-facebook"></i>
+
+            </a>
+            <a href="">
+              <i class="fa-brands fa-twitter"></i>
+
+            </a>
+            <a href="">
+              <i class="fa-brands fa-viber"></i>
+            </a>
+           </div>
+          </div>
+
+          <div class="meoreSection">
+                <p class="ooforce">Office</p>
+                <p class="oofice18">18 Office Park Building 21th Floor Unit C.Jl. TB Simatupang Kav. 18, Jakarta Selatan ,12520</p>
+          </div>
+          <div class="meam-seqciA">
+            <p class="conatcuy">Contact</p>
+            <p class="emmail">Email : contact@jhontracktor.co</p>
+            <p class="emmail">Phone : (+62) 877-2469-7246</p>
+
+          </div>
+          <div class="meotxe-seqcia">
+            <p class="lonk">Link</p>
+            <div>
+              <p class="abouhom">Home</p>
+              <p class="abouhom">About Us</p>
+              <p class="abouhom">Service</p>
+              <p class="abouhom">Project</p>
+            </div>
+
+          </div>
+      </div>
+    </div>
+  </div>
+</footer>
 
 </body>
 
